--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 #theme: jekyll-theme-cayman
-remote_theme: benbalter/retlab
+#remote_theme: benbalter/retlab
+remote_theme: pmarsceill/just-the-docs
 title: Il rivistaio
 description: Le riviste letterarie pinzate assieme
