--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 #theme: jekyll-theme-cayman
 #remote_theme: benbalter/retlab
-remote_theme: pmarsceill/just-the-docs
+#remote_theme: pmarsceill/just-the-docs
+remote_theme: themefisher/kross-jekyll
 title: Il rivistaio
 description: Le riviste letterarie pinzate assieme
